examples/positive/conditions.nv
fn main() : void {
    let x : int = 10;
    if (x > 9) {
        print_int(x);
        print_str(">9");
    } else {
        print_int(x);
        print_str("<=9");
    }
    return;
}
