examples/negative/unclosed_str.nv
fn main() {
    let x : str = "a;
    return;
}